kubernetes/apps/observability/goldilocks/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: observability
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https-main
  hostnames: ["goldilocks.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
